Fixed bug in CSV format discovery.